kubernetes/base/monitoring/prometheus-route/resources/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cache-assets
  namespace: monitoring
spec:
  headers:
    customResponseHeaders:
      Cache-Control: "public, max-age=31536000, immutable"
